[gd_scene load_steps=30 format=2]

[ext_resource path="res://json_script.gd" type="Script" id=1]
[ext_resource path="res://truck_HUD_updated.png" type="Texture" id=2]
[ext_resource path="res://assets/Bad Handwriting 7.2.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://assets/road_type/road-Sheet.png" type="Texture" id=4]
[ext_resource path="res://assets/Imagine_Font.ttf" type="DynamicFontData" id=6]
[ext_resource path="res://assets/road_elements/rock.png" type="Texture" id=7]
[ext_resource path="res://CitySign.tscn" type="PackedScene" id=8]
[ext_resource path="res://MenuPopup.gd" type="Script" id=9]
[ext_resource path="res://Bandits.tscn" type="PackedScene" id=10]
[ext_resource path="res://Traffic.tscn" type="PackedScene" id=11]
[ext_resource path="res://assets/road_type/highway_road.png" type="Texture" id=12]
[ext_resource path="res://Ice.tscn" type="PackedScene" id=13]
[ext_resource path="res://RockSlide.tscn" type="PackedScene" id=14]
[ext_resource path="res://Animal.tscn" type="PackedScene" id=15]
[ext_resource path="res://assets/road_type/interstate-Sheet.png" type="Texture" id=16]
[ext_resource path="res://Police.tscn" type="PackedScene" id=17]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 4 )
region = Rect2( 0, 0, 120, 80 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 4 )
region = Rect2( 120, 0, 120, 80 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 16 )
region = Rect2( 0, 0, 160, 80 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 16 )
region = Rect2( 160, 0, 160, 80 )

[sub_resource type="SpriteFrames" id=5]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ) ],
"loop": true,
"name": "default",
"speed": 10.0
}, {
"frames": [ SubResource( 3 ), SubResource( 4 ) ],
"loop": true,
"name": "interstate",
"speed": 10.0
} ]

[sub_resource type="DynamicFont" id=6]
size = 30
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=7]
size = 14
font_data = ExtResource( 6 )

[sub_resource type="DynamicFont" id=8]
size = 14
font_data = ExtResource( 6 )

[sub_resource type="DynamicFont" id=9]
size = 14
font_data = ExtResource( 6 )

[sub_resource type="DynamicFont" id=10]
size = 19
font_data = ExtResource( 6 )

[sub_resource type="DynamicFont" id=11]
size = 19
font_data = ExtResource( 6 )

[sub_resource type="DynamicFont" id=12]
font_data = ExtResource( 6 )

[sub_resource type="DynamicFont" id=13]
size = 48
font_data = ExtResource( 6 )

[node name="Node2D" type="Node2D"]
script = ExtResource( 1 )
Ice = ExtResource( 13 )
RockSlide = ExtResource( 14 )
Animal = ExtResource( 15 )
Traffic = ExtResource( 11 )
Bandits = ExtResource( 10 )
Police = ExtResource( 17 )
Sign = ExtResource( 8 )

[node name="Environment" type="Sprite" parent="."]
position = Vector2( 600, 400 )
scale = Vector2( 5, 5 )
texture = ExtResource( 12 )

[node name="Road" type="AnimatedSprite" parent="."]
position = Vector2( 600, 600 )
scale = Vector2( 5, 5 )
frames = SubResource( 5 )
animation = "interstate"
playing = true

[node name="Rock" type="Sprite" parent="."]
position = Vector2( 680, 400 )
texture = ExtResource( 7 )

[node name="TruckHUD" type="Sprite" parent="."]
position = Vector2( 600, 400 )
scale = Vector2( 5, 5 )
texture = ExtResource( 2 )

[node name="lblContract" type="Label" parent="."]
margin_left = 917.717
margin_top = 507.226
margin_right = 1227.72
margin_bottom = 689.226
rect_scale = Vector2( 0.795402, 0.572248 )
custom_fonts/font = SubResource( 6 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Timer" type="Timer" parent="."]

[node name="UpgBody" type="Sprite" parent="."]
position = Vector2( 450, 60 )
scale = Vector2( 3, 3 )

[node name="lblBody" type="Label" parent="."]
margin_left = 410.0
margin_top = 6.0
margin_right = 490.0
margin_bottom = 36.0
custom_fonts/font = SubResource( 7 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_constants/line_spacing = -3
text = "Body:
"
align = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="UpgTires" type="Sprite" parent="."]
position = Vector2( 600, 60 )
scale = Vector2( 3, 3 )

[node name="lblTires" type="Label" parent="."]
margin_left = 560.595
margin_top = 5.4054
margin_right = 640.595
margin_bottom = 35.4054
custom_fonts/font = SubResource( 8 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_constants/line_spacing = -3
text = "Tires: 
"
align = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="UpgAddOns" type="Sprite" parent="."]
position = Vector2( 750, 60 )
scale = Vector2( 3, 3 )

[node name="lblAddOns" type="Label" parent="."]
margin_left = 710.0
margin_top = 6.0
margin_right = 790.0
margin_bottom = 36.0
custom_fonts/font = SubResource( 9 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_constants/line_spacing = -3
text = "Add-Ons:
"
align = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="lblSpeed" type="Label" parent="."]
margin_left = 86.0
margin_top = 650.0
margin_right = 186.0
margin_bottom = 691.0
custom_fonts/font = SubResource( 10 )
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="lblFuel" type="Label" parent="."]
margin_left = 490.0
margin_top = 650.0
margin_right = 572.0
margin_bottom = 690.0
custom_fonts/font = SubResource( 11 )
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="lblHealth" type="Label" parent="."]
margin_left = 60.0
margin_top = 15.0
margin_right = 184.0
margin_bottom = 55.0
custom_fonts/font = SubResource( 11 )
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="lblTime" type="Label" parent="."]
margin_left = 230.0
margin_top = 15.0
margin_right = 354.0
margin_bottom = 55.0
custom_fonts/font = SubResource( 11 )
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="lblMoney" type="Label" parent="."]
margin_left = 850.0
margin_top = 15.0
margin_right = 974.0
margin_bottom = 55.0
custom_fonts/font = SubResource( 11 )
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="lblRenown" type="Label" parent="."]
margin_left = 1020.0
margin_top = 15.0
margin_right = 1144.0
margin_bottom = 55.0
custom_fonts/font = SubResource( 11 )
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MenuPopup" type="Popup" parent="."]
pause_mode = 2
margin_left = 440.0
margin_top = 300.0
margin_right = 480.0
margin_bottom = 340.0
popup_exclusive = true
script = ExtResource( 9 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="MenuPopup"]
margin_left = 60.0
margin_top = 40.0
margin_right = 260.0
margin_bottom = 140.0
color = Color( 0.313726, 0.313726, 0.313726, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Resume" type="ColorRect" parent="MenuPopup"]
margin_left = 70.0
margin_top = 50.0
margin_right = 250.0
margin_bottom = 70.0

[node name="Label" type="Label" parent="MenuPopup/Resume"]
margin_right = 180.0
margin_bottom = 20.0
custom_fonts/font = SubResource( 12 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "RESUME GAME"
align = 1
valign = 1

[node name="Restart" type="ColorRect" parent="MenuPopup"]
margin_left = 70.0
margin_top = 80.0
margin_right = 250.0
margin_bottom = 100.0

[node name="Label" type="Label" parent="MenuPopup/Restart"]
margin_right = 180.0
margin_bottom = 20.0
custom_fonts/font = SubResource( 12 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "RESTART GAME"
align = 1
valign = 1

[node name="Quit" type="ColorRect" parent="MenuPopup"]
margin_left = 70.0
margin_top = 110.0
margin_right = 250.0
margin_bottom = 130.0

[node name="Label" type="Label" parent="MenuPopup/Quit"]
margin_right = 180.0
margin_bottom = 20.0
custom_fonts/font = SubResource( 12 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "QUIT"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RestartScreen" type="ColorRect" parent="."]
visible = false
margin_right = 1200.0
margin_bottom = 800.0
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="RestartScreen"]
margin_left = 450.0
margin_top = 350.0
margin_right = 750.0
margin_bottom = 450.0
custom_fonts/font = SubResource( 13 )
text = "RESTARTING
"
align = 1
valign = 1
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
